# next_flask_template

./: .gitignore  LICENSE  README.md  createNextFlaskApp.ts  helpers.ts  index.ts  package-lock.json  package.json  tsconfig.json
backend/src/modules/: __init__.py
frontend/: next.config.mjs  package-lock.json  tsconfig.json
template/backend/: pyproject.toml
template/backend/src/: config.py
template/backend/src/modules/: db.py  middleware.py
template/frontend/: package.json
template/workflows/: backend_cli.yaml  frontend_cli.yaml
templates/: index.ts
